# mm-secretkeeper

./: README.md  README.txt  justfile  pyproject.toml
src/app/: http_server.py
src/app/cli/: cli.py  daemon.py
src/app/server/: server.py
src/mm_secretkeeper/cli/: cli.py
