[project]
name = "app"
version = "0.0.1"
description = "a secret keeper"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.6",
    "mm-std>=0.1.9",
    "pyperclip>=1.9.0",
    "sqlcipher3>=0.5.4",
    "typer>=0.15.1",
]
[project.scripts]
sk = "app.cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.4",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "ruff~=0.9.2",
    "pip-audit~=2.7.3",
    "bandit~=1.8.0",
    "mypy~=1.14.1",
]

[tool.mypy]
python_version = "3.13"
implicit_reexport = true
warn_no_return = false
strict = true
plugins = "pydantic.mypy"
[[tool.mypy.overrides]]
module = ["sqlcipher3.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 130
target-version = "py313"
lint.select = [
    "F", # Pyflakes
    "E", "W", # pycodestyle
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "COM", # flake8-commas
    "C40", # flake8-comprehensions
    "G", # flake8-logging-format
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RUF", # Ruff-specific rules
]
lint.ignore = [
    "A003", # builtin-attribute-shadowing
    "B008", # function-call-argument-default
    "RUF012",
    "COM812",
]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]
