[project]
name = "mm-secretkeeper"
version = "0.0.2"
description = "a secret keeper"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]~=0.115.6",
    "mm-std~=0.1.10",
    "pyperclip~=1.9.0",
    "sqlcipher3~=0.5.4",
    "python-daemon==3.1.2",
    "typer~=0.15.1",
]
[project.scripts]
sk = "mm_secretkeeper.cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest~=8.3.4",
    "pytest-xdist~=3.6.1",
    "pytest-httpserver~=1.1.0",
    "ruff~=0.9.2",
    "pip-audit~=2.7.3",
    "bandit~=1.8.0",
    "mypy~=1.14.1",
]

[tool.mypy]
python_version = "3.13"
implicit_reexport = true
warn_no_return = false
strict = true
plugins = "pydantic.mypy"
[[tool.mypy.overrides]]
module = ["sqlcipher3.*", "pyperclip.*", "daemon.*"]
ignore_missing_imports = true


[tool.ruff]
line-length = 130
target-version = "py313"
[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "A005", # flake8-builtins: stdlib-module-shadowing
    "ERA001", # eradicate: commented-out-code
    "PT", # flake8-pytest-style
    "D", # pydocstyle
    "FIX", # flake8-fixme
    "PLR0911", # refactor: too-many-return-statements
    "PLR0913", # pylint: too-many-arguments
    "PLR2004", # pylint: magic-value-comparison
    "PLC0414", # pylint: useless-import-alias
    "FBT", # flake8-boolean-trap
    "EM", # flake8-errmsg
    "TRY003", # tryceratops: raise-vanilla-args
    "C901", # mccabe: complex-structure,
    "BLE001", # flake8-blind-except
    "S311", # bandit: suspicious-non-cryptographic-random-usage
    "TD002", # flake8-todos: missing-todo-author
    "TD003", # flake8-todos: missing-todo-link
    "COM812", # it's used in ruff formatter
]
[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["ANN", "S"]
[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B311"]
